--- a/content/guides/destructuring.adoc
+++ b/content/guides/destructuring.adoc
@@ -1,14 +1,17 @@
 = Destructuring in Clojure
 Michael Zavarella
-2015-12-9
-:jbake-type: page
+2015-12-09
+:jbake-type: guides
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-=== What is Destructuring?
+toc::[]
 
-Destructuring is a way to concisely bind names to the values in a data structure. It allows us to remove some of the bulk when working with large data structures. Destructuring allows us to write more concise and readable code.
+== What is Destructuring?
+
+Destructuring is a way to concisely bind names to the values in a data structure. Destructuring allows us to write more concise and readable code.
 
 Consider the following example of extracting and naming values in a vector.
 
@@ -17,16 +20,16 @@ Consider the following example of extracting and naming values in a vector.
 (def my-line [[5 10] [10 20]])
 
 (let [p1 (first my-line)
-       p2 (second my-line)
-       x1 (first p1)
-       y1 (second p1)
-       x2 (first p2)
-       y2 (second p2)]
+      p2 (second my-line)
+      x1 (first p1)
+      y1 (second p1)
+      x2 (first p2)
+      y2 (second p2)]
   (println "Line from (" x1 "," y1 ") to (" x2 ", " y2 ")"))
- ;= "Line from ( 5 , 10 ) to ( 10 , 20 )"
+;= "Line from ( 5 , 10 ) to ( 10 , 20 )"
 ----
 
-This is perfectly valid, but the code extracting and naming the values in the vector obsucring our intent. Destructuring allows us to concisely extract and name important parts of complex data structures to make our code cleaner.
+This is perfectly valid, but the code extracting and naming the values in the vector obscures our intent. Destructuring allows us to more concisely extract and name important parts of complex data structures to make our code cleaner.
 
 [source,clojure]
 ----
@@ -42,11 +45,11 @@ Rather than explictly binding each variable, we describe the bindings based on t
 
 We have a data structure `my-line` that looks like this, `[[5 10] [10 20]]`. In our destructuring form we will create a vector containing two elements, `p1` and `p2`, each of which are vectors themselves. This will bind the vector `[5 10]` to the symbol `p1` and the vector `[10 20]` to the symbol `p2`. Since we want to work with the elements of `p1` and `p2` rather than the structures themselves, we destructure `p1` and `p2` within the same let statement. The vector `p1` looks like this, `[5 10]`, so to destructure it, we create a vector containing two elements, `x1` and `y1`. This binds `5` to the symbol `x1` and `10` to the symbol `y1`. The same is repeated for `p2` binding `10` to `x2` and `20` to `y2`. At this point, we now have everything we need to work with our data.
 
-=== Sequential Destructuring
+== Sequential Destructuring
 
 Clojure destructuring is broken up into two categories, sequential destructuring and associative destructuring. Sequential destructuring represents a sequential data structure as a Clojure vector within a let binding.
 
-This type of destructuring can be used on any kind of data structure that can be traversed in linear time. That includes anything from Clojure
+This type of destructuring can be used on any kind of data structure that can be traversed in linear time, including lists, vectors, and anything that can produce a sequence.
 
 [source,clojure]
 ----
@@ -73,7 +76,7 @@ This type of destructuring can be used on any kind of data structure that can be
 ;= (java.lang.Character java.lang.Character java.lang.Character)
 ----
 
-The key to seuqential destructuring is that you bind the values one-by-one to the symbols of a vector. For instance the vector `[x y z]` will match each element one-by-one with the list `'(1 2 3)`.
+The key to sequential destructuring is that you bind the values one-by-one to the symbols in the vector. For instance the vector `[x y z]` will match each element one-by-one with the list `'(1 2 3)`.
 
 In some cases, the collection you are destructuring isn't the exact same size as the destructuring bindings. If the vector is too small, the extra symbols will be bound to nil.
 
@@ -91,7 +94,7 @@ On the other hand, if the collection is too large, the extra values are simply i
 ----
 (def large-list '(1 2 3 4 5 6 7 8 9 10))
 (let [[a b c] large-list]
-  (println a b c)
+  (println a b c))
 ;= 1 2 3
 ----
 
@@ -116,14 +119,14 @@ Say you want to print the first element on one line and the remainder on another
 ;= Amber Aaron Nick Earl Joe
 ----
 
-This binding works but even using destructuring it's pretty clunky. Here we can use `&` to clump the tail elements into a sequence.
+This binding works but even using destructuring it's pretty clunky. Instead we can use `&` to combine the tail elements into a sequence.
 
 [source,clojure]
 ----
 (let [[first & remaining] names]
   (do
     (println first)
-    (println remaining)))
+    (apply println remaining)))
 ;= Michael
 ;= Amber Aaron Nick Earl Joe
 ----
@@ -168,9 +171,7 @@ So rest is bound to a `sequence` containing the remaining elements of the `numbe
 ;= \C (\l \o \j \u \r \e) "Clojure"
 ----
 
-How this works is, bound to `all` is the original structure (String, vector, list, whatever it may be). Bound to `x` is the character `\C`. And bound to `rest` is the list of characters remaining.
-
-
+So `all` is bound to the original structure (String, vector, list, whatever it may be) and `x` is bound to the character `\C`, and `rest` is the remaining list of characters.
 
 You can combine any or all of these techniques at the same time at your discretion.
 
@@ -179,15 +180,15 @@ You can combine any or all of these techniques at the same time at your discreti
 (def fruits ["apple" "orange" "strawberry" "peach" "pear" "lemon"])
 (let [[first _ third & rest :as all-fruits] fruits]
   (do
-    (println "The first and thir fruits are," first "and" third)
-    (println "These we're taken from" all-fruits)
-    (println "The fruits after them are" rest))
-;= The first and third fruits are, apple and strawberry
-;= These we're taken from [apple orange strawberry peach pear lemon]
-;= The fruits after them are (peache pear lemon)
+    (println "The first and third fruits are" first "and" third)
+    (println "These were taken from" all-fruits)
+    (println "The fruits after them are" rest)))
+;= The first and third fruits are apple and strawberry
+;= These were taken from [apple orange strawberry peach pear lemon]
+;= The fruits after them are (peach pear lemon)
 ----
 
-Destructuring grants you access to vectors nested within vectors as well. Let's go back to our vector from the very beginning, `my-line`.
+Destructuring can also be nested to get access to arbitrary levels of sequential structure.. Let's go back to our vector from the very beginning, `my-line`.
 
 [source,clojure]
 ----
@@ -203,9 +204,7 @@ This vector is comprised of nested vectors that we can access directly.
 ;= "Line from ( 5 , 10 ) to ( 10 , 20 )"
 ----
 
-While you can penetrate through as many layers as you need, once you get to the fourth or fifth layer this becomes difficult to read.
-
-When you have nested vectors, you can use `:as` to bind the whole nested vector to a single symbol.
+When you have nested vectors, you can use `:as` or `&` at any level as well.
 
 [source,clojure]
 ----
@@ -213,11 +212,11 @@ When you have nested vectors, you can use `:as` to bind the whole nested vector 
   (do
     (println a b first)
     (println c d second)))
-;= 1 2 [1 2]
-;= 3 4 [3 4]
+;= 5 10 [5 10]
+;= 10 20 [10 20]
 ----
 
-=== Associative Destructuring
+== Associative Destructuring
 
 Syntax: `[{symbol-1 :key-a, symbol-2 :key-b} {:key-a "value a" :key-b "value b"}]`
 
@@ -422,11 +421,11 @@ You can also destructure auto-resolved keywords:
 ----
 
 
-=== Where to destructure
+== Where to destructure
 
 You can utilize destructuring anywhere that there is an explicit or implicit let binding.
 
-==== Function Declarations
+=== Function Declarations
 
 Passing a collection of information into a function is common practice in Clojure, so the ability to separate those parameters' information is important. When you define a function in Clojure you can utilize destructuring to make the function definition very concise.
 
